[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI/GUI.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.6899
height = 25.8981

[sub_resource type="Animation" id=2]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteBody:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.4 ), Vector2( 0.5, 0.5 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 2 )

[node name="SpriteBody" type="Sprite" parent="."]
position = Vector2( -1, 1 )
scale = Vector2( 0.5, 0.4 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 475, 456, 55, 94 )

[node name="Camera2D" type="Camera2D" parent="."]
smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.552078, 1.47221 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 2 )

[node name="Turret" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.4 )
texture = ExtResource( 1 )
offset = Vector2( 30, 0 )
region_enabled = true
region_rect = Rect2( 571, 489, 75, 12 )

[node name="Muzzle" type="Position2D" parent="Turret"]
position = Vector2( 90, 0 )

[node name="GunTimer" type="Timer" parent="."]

[node name="PlayerGUI" parent="." instance=ExtResource( 3 )]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
